# nanoexcalibur

./: .gitignore  CMakeLists.txt
data/: background.spr  enemy_green.spr  enemy_red.spr  player.spr  projectile.spr  tile_block.spr  tile_bottom.spr  tile_bottom_left.spr  tile_bottom_right.spr  tile_left.spr  tile_middle.spr  tile_right.spr  tile_top.spr  tile_top_left.spr  tile_top_right.spr
game/: Main.cpp
game/collision/: Collider.hpp  CollisionDetection.hpp
game/common/: GameField.hpp  GameStartEvent.hpp  SpawnPoints.hpp  Utils.hpp
game/enemy/: Enemy.hpp  EnemySpawning.hpp  Path.hpp
game/player/: PlayerShooting.hpp  PlayerSpawning.hpp  PlayerWalking.hpp
game/projectile/: Projectile.hpp  ProjectileProcessing.hpp
source/: Engine.cpp  Engine.hpp  Main.cpp
source/common/: GUI.cpp  GUI.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Transform2D.hpp
source/ecs/: ComponentHelper.hpp  ComponentStorage.hpp  Config.hpp  Entity.hpp  Entity.inl  Events.hpp  EventsManager.hpp  PoorEntity.hpp  PoorWorld.hpp  QueryList.hpp  QueryList.inl  System.cpp  System.hpp  System.inl  World.hpp  World.inl  ecs.cpp  ecs.hpp
source/engine/: AssetsManager.hpp  Engine.cpp  Engine.hpp  InputManager.hpp  TimeManager.hpp  Window.cpp  Window.hpp  WindowEventsProcessing.hpp
source/gfx/: Camera2D.hpp  Font.hpp  GraphicsUtils.cpp  GraphicsUtils.hpp  HUDImageRenderer.hpp  HUDTextRenderer.hpp  Rendering.cpp  Rendering.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp
source/nexc/: nexc.hpp
source/sound/: EmitSoundEvent.hpp  Sound.hpp  (+2 more)
(+40 files in other folders)
